--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -36,17 +36,6 @@ jobs:
       - name: fmt
         run: cargo fmt --all -- --check
 
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: Swatinem/rust-cache@v1
-
-      - name: Build
-        run: cargo build --verbose
-
   test:
     runs-on: ubuntu-latest
 
@@ -56,4 +45,4 @@ jobs:
       - uses: Swatinem/rust-cache@v1
 
       - name: Run tests
-        run: cargo test --verbose -- --test-threads=1
+        run: cargo test
