--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -2,43 +2,11 @@ name: Rust
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-
-      - uses: Swatinem/rust-cache@v1
-
-      - name: Lint
-        run: cargo clippy --lib -- -D warnings
-
-  format:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: Swatinem/rust-cache@v1
-
-      - run: rustup component add rustfmt
-
-      - name: fmt
-        run: cargo fmt --all -- --check
-
   test:
     runs-on: ubuntu-latest
 
@@ -47,5 +15,8 @@ jobs:
 
       - uses: Swatinem/rust-cache@v1
 
-      - name: Run tests
-        run: cargo test
+      - name: check open files limit
+        run: ulimit -n
+
+      - name: set open files limit and run tests
+        run: ulimit -n 2048 && cargo test -v
