--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -20,23 +20,28 @@ jobs:
       - name: Setup rust toolchain
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
+          components: rustfmt, llvm-tools-preview
+          override: true
+          profile: minimal
           toolchain: stable
-          components: llvm-tools-preview
 
       - name: Run tests
         env:
-          RUSTFLAGS: "-Cinstrument-coverage"
+          CARGO_INCREMENTAL: "0"
+          #LLVM_PROFILE_FILE: "target/coverage/%p-%m.profraw"
           RUSTDOCFLAGS: "-Cinstrument-coverage"
-          LLVM_PROFILE_FILE: "target/coverage/%p-%m.profraw"
-        run: cargo test
+          RUSTFLAGS: "-Cinstrument-coverage"
+        run: cargo test issue
 
       - name: Install grcov
         run: cargo install grcov
 
       - name: Generate coverage report
-        run: >
-          grcov target/coverage -s . --binary-path target/debug/ -t lcov --branch
-          --ignore 'target/*' --ignore 'tests/*' --ignore-not-existing -o coverage.lcov
+        #run: >
+        #  grcov target/coverage -s . --binary-path target/debug/ -t lcov --branch
+        #  --ignore 'target/*' --ignore 'tests/*' --ignore-not-existing -o coverage.lcov
+        run: grcov . --binary-path target/debug/ -s . -t lcov --branch --ignore-not-existing --ignore '../**' --ignore '/*' -o coverage.lcov
+
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4
