--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - coverage
   pull_request:
     branches:
       - master
@@ -30,7 +31,7 @@ jobs:
           curl -fsSL $LLVM_COV_RELEASES/latest/download/cargo-llvm-cov-$host.tar.gz | tar xzf - -C "$HOME/.cargo/bin"
 
       - name: Generate coverage report
-        run: cargo llvm-cov --lcov --output-path coverage.lcov
+        run: cargo llvm-cov --lcov --output-path coverage.lcov -- input_sorting
 
       - name: Upload coverage report
         uses: codecov/codecov-action@v4
