--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Run tests
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "cross_platform_GH_actions" ]
   pull_request:
     branches: [ "master" ]
 
